@@ -11,6 +11,11 @@ if [ "$1" = "triggered" ]; then
                         "/@OODIR@/share/extensions")
                           make_lo_sync_extensions
                         ;;
+                        "/@OODIR@")
+                          if [ -d /var/lib/lool/systemplate ]; then
+                            update_lool_systemplate
+                          fi
+                        ;;
                 esac
         done
 fi
