@@ -1,1 +1,2 @@
-interest /@OODIR@/share/extensions
+interest-noawait /@OODIR@/share/extensions
+interest-noawait /@OODIR@
