@@ -2,6 +2,10 @@ libreoffice (1:5.4.4~rc1~git20171119-1) UNRELEASED; urgency=medium
 
   * New upstream snapshot
 
+  * debian/libreoffice-common.{triggers,postinst}.in,
+    debian/shell-lib-lool.sh: add trigger updating LOOLs systemplate
+  * debian/libreoffice-common.triggers.in: switch to interest-noawait triggers
+
  -- Rene Engelhard <rene@debian.org>  Fri, 20 Oct 2017 13:40:01 +0000
 
 libreoffice (1:5.4.3-2) unstable; urgency=medium
